manifest/mics/elk/ingress-elk.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  annotations:
   kubernetes.io/ingress.class: nginx
   cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  rules:
  - host: kibana.kubesight.online
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kibana-v1-kb-http
              port:
                number: 5601
      
  tls:
      - hosts:
          - kibana.kubesight.online
        secretName: tls-secret
